Fixed issue with resizing of search box when navbar is collapsed. https://github.com/Memba/Memba-Blog/issues/58

--- a/styles/app.page.common.less
+++ b/styles/app.page.common.less
@@ -61,6 +61,9 @@ label {
             }
         }
     }
+    #navbar-search-input.k-state-active {
+        min-width: 250px;
+    }
 }
 @media (max-width: 767px) {
     .navbar {
